{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 51,
  "lineage": "ba4afa8d-61ce-ef3c-86af-2d220ed32c27",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:958904137327:loadbalancer/app/eks-nginx-alb/0322a04685281144",
            "arn_suffix": "app/eks-nginx-alb/0322a04685281144",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "eks-nginx-alb-1081736509.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:958904137327:loadbalancer/app/eks-nginx-alb/0322a04685281144",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eks-nginx-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-06bffbf9b8a737153",
              "sg-0ad4917be65cd1c42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0764263c2e6b5006f"
              },
              {
                "subnet_id": "subnet-0866ede0842c8c5d9"
              },
              {
                "subnet_id": "subnet-0bff7e42370abc9d2"
              }
            ],
            "subnets": [
              "subnet-0764263c2e6b5006f",
              "subnet-0866ede0842c8c5d9",
              "subnet-0bff7e42370abc9d2"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "eks",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "default/nginx-ingress"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:security-group/sg-02286e7f71beb04a7",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02286e7f71beb04a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8573e1fac781b5a"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "958904137327",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-node-sg"
            },
            "tags_all": {
              "Name": "eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route.nat_gateway_route",
            "module.vpc.aws_route.public_route",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.sg_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "controlplane_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1025,
            "id": "sgrule-1500639224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02286e7f71beb04a7",
            "security_group_rule_id": "sgr-02dde7d8fd15fd5e7",
            "self": false,
            "source_security_group_id": "sg-0e8573e1fac781b5a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route.nat_gateway_route",
            "module.vpc.aws_route.public_route",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.sg_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1958911412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-02286e7f71beb04a7",
            "security_group_rule_id": "sgr-0fdac1306a261ca0e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route.nat_gateway_route",
            "module.vpc.aws_route.public_route",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.sg_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_self_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-590110261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-02286e7f71beb04a7",
            "security_group_rule_id": "sgr-01f5f7af7f6e7d5af",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route.nat_gateway_route",
            "module.vpc.aws_route.public_route",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.sg_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/nginx-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/load-balancer-name": "eks-nginx-alb",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "nginx-ingress",
                "namespace": "default",
                "resource_version": "15660",
                "uid": "7ca10157-0fc0-4be3-9530-630f93e3a1f0"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "nginx-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.my-eks-node-group",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_policy.alb_controller",
            "module.eks.aws_iam_role.alb_controller",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.alb_controller_attach",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cni",
            "module.eks.aws_iam_role_policy_attachment.ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.worker_node",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.controlplane_to_nodes",
            "module.eks.aws_security_group_rule.node_egress",
            "module.eks.aws_security_group_rule.node_self_ingress",
            "module.eks.data.aws_eks_cluster.this",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.data.http.alb_policy_json",
            "module.eks.helm_release.alb_controller",
            "module.eks.kubernetes_service_account_v1.alb_controller",
            "module.nginx.kubernetes_service_v1.this",
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route.nat_gateway_route",
            "module.vpc.aws_route.public_route",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.sg_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/nginx-service",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-service",
                "namespace": "default",
                "resource_version": "15639",
                "uid": "77a3c833-3f4d-4434-b228-e5d338d8b938"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.165.105",
                "cluster_ips": [
                  "172.20.165.105"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.my-eks-node-group",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_policy.alb_controller",
            "module.eks.aws_iam_role.alb_controller",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.node",
            "module.eks.aws_iam_role_policy_attachment.alb_controller_attach",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cni",
            "module.eks.aws_iam_role_policy_attachment.ecr",
            "module.eks.aws_iam_role_policy_attachment.node_ssm",
            "module.eks.aws_iam_role_policy_attachment.worker_node",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.controlplane_to_nodes",
            "module.eks.aws_security_group_rule.node_egress",
            "module.eks.aws_security_group_rule.node_self_ingress",
            "module.eks.data.aws_eks_cluster.this",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.data.http.alb_policy_json",
            "module.eks.helm_release.alb_controller",
            "module.eks.kubernetes_service_account_v1.alb_controller",
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route.nat_gateway_route",
            "module.vpc.aws_route.public_route",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.sg_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076275fbf073138eb",
            "arn": "arn:aws:ec2:ap-south-1:958904137327:elastic-ip/eipalloc-076275fbf073138eb",
            "association_id": "eipassoc-041df4b8e287933f8",
            "domain": "vpc",
            "id": "eipalloc-076275fbf073138eb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02ab2a34b91694897",
            "private_dns": "ip-10-0-5-21.ap-south-1.compute.internal",
            "private_ip": "10.0.5.21",
            "public_dns": "ec2-3-109-166-166.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.166.166",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:internet-gateway/igw-0dbdcc6bdbd637577",
            "id": "igw-0dbdcc6bdbd637577",
            "owner_id": "958904137327",
            "region": "ap-south-1",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076275fbf073138eb",
            "association_id": "eipassoc-041df4b8e287933f8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-022520885a75a6a0d",
            "network_interface_id": "eni-02ab2a34b91694897",
            "private_ip": "10.0.5.21",
            "public_ip": "3.109.166.166",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0764263c2e6b5006f",
            "tags": {
              "Name": "my-nw"
            },
            "tags_all": {
              "Name": "my-nw"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-041546e7b7984fd1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-022520885a75a6a0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-041546e7b7984fd1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_nat_gateway.my_nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbdcc6bdbd637577",
            "id": "r-rtb-0c230709299ad08921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c230709299ad0892",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:route-table/rtb-041546e7b7984fd1b",
            "id": "rtb-041546e7b7984fd1b",
            "owner_id": "958904137327",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022520885a75a6a0d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-rt"
            },
            "tags_all": {
              "Name": "my-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:route-table/rtb-0c230709299ad0892",
            "id": "rtb-0c230709299ad0892",
            "owner_id": "958904137327",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbdcc6bdbd637577",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-rt"
            },
            "tags_all": {
              "Name": "my-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b45537d6c9a94aa8",
            "region": "ap-south-1",
            "route_table_id": "rtb-041546e7b7984fd1b",
            "subnet_id": "subnet-0deb5740efbed559c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c31a733164255cb",
            "region": "ap-south-1",
            "route_table_id": "rtb-041546e7b7984fd1b",
            "subnet_id": "subnet-05016c820a0373c28"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a2592ef293ff70",
            "region": "ap-south-1",
            "route_table_id": "rtb-041546e7b7984fd1b",
            "subnet_id": "subnet-08b31ecf0c61a7faa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9a5bdd42b699df4",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c230709299ad0892",
            "subnet_id": "subnet-0764263c2e6b5006f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090662a0f2c6c9282",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c230709299ad0892",
            "subnet_id": "subnet-0866ede0842c8c5d9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044c1305e0954a04c",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c230709299ad0892",
            "subnet_id": "subnet-0bff7e42370abc9d2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:security-group/sg-0e29e820423676cae",
            "description": "Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e29e820423676cae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_group",
            "name_prefix": "",
            "owner_id": "958904137327",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:subnet/subnet-0deb5740efbed559c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deb5740efbed559c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958904137327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet 1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-Subnet 1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:subnet/subnet-05016c820a0373c28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05016c820a0373c28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958904137327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet 2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-Subnet 2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:subnet/subnet-08b31ecf0c61a7faa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b31ecf0c61a7faa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958904137327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet 3",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-Subnet 3",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:subnet/subnet-0764263c2e6b5006f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0764263c2e6b5006f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958904137327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet 1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-Subnet 1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:subnet/subnet-0866ede0842c8c5d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0866ede0842c8c5d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958904137327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet 2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-Subnet 2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:subnet/subnet-0bff7e42370abc9d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bff7e42370abc9d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958904137327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet 3",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-Subnet 3",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9a7a3eb2e84dd13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:958904137327:vpc/vpc-0f9a7a3eb2e84dd13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031194ec33d72af34",
            "default_route_table_id": "rtb-07121b2c37e8f61fa",
            "default_security_group_id": "sg-0a2c767d5eb07f69a",
            "dhcp_options_id": "dopt-07e6469455b5d1d78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9a7a3eb2e84dd13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07121b2c37e8f61fa",
            "owner_id": "958904137327",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}